{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 401,
  "lineage": "635185b9-bdce-e2b1-87e9-3f6bf34191e9",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555292118434:security-group/sg-0881166ec783be1ae",
            "description": "Security group for EKS cluster",
            "egress": [],
            "id": "sg-0881166ec783be1ae",
            "ingress": [],
            "name": "eks-xTreAu1P-cluster-sg-681aff9ea06c6af9742d4a43a4",
            "name_prefix": "eks-xTreAu1P-cluster-sg-",
            "owner_id": "555292118434",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "eks-xTreAu1P-cluster-sg",
              "Project": "Learning Terraform"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "eks-xTreAu1P-cluster-sg",
              "Project": "Learning Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c418f197b2c8612"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "555292118434",
            "id": "sg-0881166ec783be1ae",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555292118434:security-group/sg-08dfa8c4692022903",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-08dfa8c4692022903",
            "ingress": [],
            "name": "eks-xTreAu1P-node-cc001464a4e71271390655663e",
            "name_prefix": "eks-xTreAu1P-node-",
            "owner_id": "555292118434",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "eks-xTreAu1P-node",
              "Project": "Learning Terraform",
              "karpenter.sh/discovery": "eks-xTreAu1P",
              "kubernetes.io/cluster/eks-xTreAu1P": "owned"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "eks-xTreAu1P-node",
              "Project": "Learning Terraform",
              "karpenter.sh/discovery": "eks-xTreAu1P",
              "kubernetes.io/cluster/eks-xTreAu1P": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c418f197b2c8612"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "555292118434",
            "id": "sg-08dfa8c4692022903",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow Kubernetes API access from trusted networks",
            "from_port": 443,
            "id": "sgrule-2843462906",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0881166ec783be1ae",
            "security_group_rule_id": "sgr-01888a2c34e3bdf25",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1274829788",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0881166ec783be1ae",
            "security_group_rule_id": "sgr-051807bfc495ab152",
            "self": false,
            "source_security_group_id": "sg-08dfa8c4692022903",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-4100541189",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-08dfa8c4692022903",
            "security_group_rule_id": "sgr-0feaa40a12975f312",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_10251_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 10251/tcp webhook",
            "from_port": 10251,
            "id": "sgrule-1500328401",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-08dfa8c4692022903",
            "security_group_rule_id": "sgr-0ae5116b0356211c6",
            "self": false,
            "source_security_group_id": "sg-0881166ec783be1ae",
            "timeouts": null,
            "to_port": 10251,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3153160266",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-08dfa8c4692022903",
            "security_group_rule_id": "sgr-08b3975e92f1708b1",
            "self": false,
            "source_security_group_id": "sg-0881166ec783be1ae",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3006967928",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-08dfa8c4692022903",
            "security_group_rule_id": "sgr-0f9d13a096b3d56ae",
            "self": false,
            "source_security_group_id": "sg-0881166ec783be1ae",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2054739950",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-08dfa8c4692022903",
            "security_group_rule_id": "sgr-0b6b05217b66a1e6e",
            "self": false,
            "source_security_group_id": "sg-0881166ec783be1ae",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1764027343",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-08dfa8c4692022903",
            "security_group_rule_id": "sgr-04c1b487c41f18cef",
            "self": false,
            "source_security_group_id": "sg-0881166ec783be1ae",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-226875396",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-08dfa8c4692022903",
            "security_group_rule_id": "sgr-0b9c880ff0fe196cb",
            "self": false,
            "source_security_group_id": "sg-0881166ec783be1ae",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1831100842",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-08dfa8c4692022903",
            "security_group_rule_id": "sgr-082b9ca383b19f84f",
            "self": false,
            "source_security_group_id": "sg-0881166ec783be1ae",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-659306038",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-08dfa8c4692022903",
            "security_group_rule_id": "sgr-088a4838f6ac23caf",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1914648330",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-08dfa8c4692022903",
            "security_group_rule_id": "sgr-0accabd2480c17092",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3594556645",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "region": "us-east-1",
            "security_group_id": "sg-08dfa8c4692022903",
            "security_group_rule_id": "sgr-0aded4b8b0f94334c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555292118434:network-acl/acl-00dc4be3396be18c3",
            "default_network_acl_id": "acl-00dc4be3396be18c3",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-00dc4be3396be18c3",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "555292118434",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-002e9b3500f2ee54f",
              "subnet-040ad5454b356f673",
              "subnet-05ce9870c6b7612bb",
              "subnet-0a67852e47c4828e6"
            ],
            "tags": {
              "Name": "eks-vpc-xTreAu1P-default",
              "kubernetes.io/cluster/eks-xTreAu1P": "shared"
            },
            "tags_all": {
              "Name": "eks-vpc-xTreAu1P-default",
              "kubernetes.io/cluster/eks-xTreAu1P": "shared"
            },
            "vpc_id": "vpc-04c418f197b2c8612"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555292118434:route-table/rtb-02d5909506a768262",
            "default_route_table_id": "rtb-02d5909506a768262",
            "id": "rtb-02d5909506a768262",
            "owner_id": "555292118434",
            "propagating_vgws": null,
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "eks-vpc-xTreAu1P-default",
              "kubernetes.io/cluster/eks-xTreAu1P": "shared"
            },
            "tags_all": {
              "Name": "eks-vpc-xTreAu1P-default",
              "kubernetes.io/cluster/eks-xTreAu1P": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-04c418f197b2c8612"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555292118434:security-group/sg-0e9e61084cb8b93ee",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0e9e61084cb8b93ee",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "555292118434",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-vpc-xTreAu1P-default",
              "kubernetes.io/cluster/eks-xTreAu1P": "shared"
            },
            "tags_all": {
              "Name": "eks-vpc-xTreAu1P-default",
              "kubernetes.io/cluster/eks-xTreAu1P": "shared"
            },
            "vpc_id": "vpc-04c418f197b2c8612"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0668372309aa0dcd1",
            "arn": "arn:aws:ec2:us-east-1:555292118434:elastic-ip/eipalloc-0668372309aa0dcd1",
            "domain": "vpc",
            "id": "eipalloc-0668372309aa0dcd1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-91-98-141.compute-1.amazonaws.com",
            "public_ip": "98.91.98.141",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-vpc-xTreAu1P-us-east-1a",
              "kubernetes.io/cluster/eks-xTreAu1P": "shared"
            },
            "tags_all": {
              "Name": "eks-vpc-xTreAu1P-us-east-1a",
              "kubernetes.io/cluster/eks-xTreAu1P": "shared"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "555292118434",
            "id": "eipalloc-0668372309aa0dcd1",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555292118434:internet-gateway/igw-00e79e45f946c1377",
            "id": "igw-00e79e45f946c1377",
            "owner_id": "555292118434",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-vpc-xTreAu1P",
              "kubernetes.io/cluster/eks-xTreAu1P": "shared"
            },
            "tags_all": {
              "Name": "eks-vpc-xTreAu1P",
              "kubernetes.io/cluster/eks-xTreAu1P": "shared"
            },
            "vpc_id": "vpc-04c418f197b2c8612"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "555292118434",
            "id": "igw-00e79e45f946c1377",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0668372309aa0dcd1",
            "association_id": "eipassoc-0703daab7d921db14",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-04babaabae314386b",
            "network_interface_id": "eni-02b47f2c24bea5793",
            "private_ip": "192.168.1.194",
            "public_ip": "98.91.98.141",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-040ad5454b356f673",
            "tags": {
              "Name": "eks-vpc-xTreAu1P-us-east-1a",
              "kubernetes.io/cluster/eks-xTreAu1P": "shared"
            },
            "tags_all": {
              "Name": "eks-vpc-xTreAu1P-us-east-1a",
              "kubernetes.io/cluster/eks-xTreAu1P": "shared"
            },
            "vpc_id": "vpc-04c418f197b2c8612"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "555292118434",
            "id": "nat-04babaabae314386b",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02b2f47db94ef93a51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04babaabae314386b",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-02b2f47db94ef93a5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "555292118434",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-02b2f47db94ef93a5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00e79e45f946c1377",
            "id": "r-rtb-00d22bbcf619d5a921080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-00d22bbcf619d5a92",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "555292118434",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-00d22bbcf619d5a92"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555292118434:route-table/rtb-02b2f47db94ef93a5",
            "id": "rtb-02b2f47db94ef93a5",
            "owner_id": "555292118434",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "eks-vpc-xTreAu1P-private",
              "kubernetes.io/cluster/eks-xTreAu1P": "shared"
            },
            "tags_all": {
              "Name": "eks-vpc-xTreAu1P-private",
              "kubernetes.io/cluster/eks-xTreAu1P": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c418f197b2c8612"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "555292118434",
            "id": "rtb-02b2f47db94ef93a5",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555292118434:route-table/rtb-00d22bbcf619d5a92",
            "id": "rtb-00d22bbcf619d5a92",
            "owner_id": "555292118434",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "eks-vpc-xTreAu1P-public",
              "kubernetes.io/cluster/eks-xTreAu1P": "shared"
            },
            "tags_all": {
              "Name": "eks-vpc-xTreAu1P-public",
              "kubernetes.io/cluster/eks-xTreAu1P": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c418f197b2c8612"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "555292118434",
            "id": "rtb-00d22bbcf619d5a92",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00397e45d6aceec3d",
            "region": "us-east-1",
            "route_table_id": "rtb-02b2f47db94ef93a5",
            "subnet_id": "subnet-05ce9870c6b7612bb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "555292118434",
            "id": "rtbassoc-00397e45d6aceec3d",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a79dcad716dd025f",
            "region": "us-east-1",
            "route_table_id": "rtb-02b2f47db94ef93a5",
            "subnet_id": "subnet-0a67852e47c4828e6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "555292118434",
            "id": "rtbassoc-0a79dcad716dd025f",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056bdbf2dcbfd9ba2",
            "region": "us-east-1",
            "route_table_id": "rtb-00d22bbcf619d5a92",
            "subnet_id": "subnet-040ad5454b356f673"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "555292118434",
            "id": "rtbassoc-056bdbf2dcbfd9ba2",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e97d80f17769e879",
            "region": "us-east-1",
            "route_table_id": "rtb-00d22bbcf619d5a92",
            "subnet_id": "subnet-002e9b3500f2ee54f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "555292118434",
            "id": "rtbassoc-0e97d80f17769e879",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555292118434:subnet/subnet-05ce9870c6b7612bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ce9870c6b7612bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "555292118434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-vpc-xTreAu1P-private-1",
              "karpenter.sh/discovery": "eks-xTreAu1P",
              "kubernetes.io/cluster/eks-xTreAu1P": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-vpc-xTreAu1P-private-1",
              "karpenter.sh/discovery": "eks-xTreAu1P",
              "kubernetes.io/cluster/eks-xTreAu1P": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04c418f197b2c8612"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "555292118434",
            "id": "subnet-05ce9870c6b7612bb",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555292118434:subnet/subnet-0a67852e47c4828e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a67852e47c4828e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "555292118434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-vpc-xTreAu1P-private-2",
              "karpenter.sh/discovery": "eks-xTreAu1P",
              "kubernetes.io/cluster/eks-xTreAu1P": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-vpc-xTreAu1P-private-2",
              "karpenter.sh/discovery": "eks-xTreAu1P",
              "kubernetes.io/cluster/eks-xTreAu1P": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04c418f197b2c8612"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "555292118434",
            "id": "subnet-0a67852e47c4828e6",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555292118434:subnet/subnet-040ad5454b356f673",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040ad5454b356f673",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "555292118434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-vpc-xTreAu1P-public-1",
              "kubernetes.io/cluster/eks-xTreAu1P": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-vpc-xTreAu1P-public-1",
              "kubernetes.io/cluster/eks-xTreAu1P": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04c418f197b2c8612"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "555292118434",
            "id": "subnet-040ad5454b356f673",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555292118434:subnet/subnet-002e9b3500f2ee54f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002e9b3500f2ee54f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "555292118434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-vpc-xTreAu1P-public-2",
              "kubernetes.io/cluster/eks-xTreAu1P": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-vpc-xTreAu1P-public-2",
              "kubernetes.io/cluster/eks-xTreAu1P": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04c418f197b2c8612"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "555292118434",
            "id": "subnet-002e9b3500f2ee54f",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555292118434:vpc/vpc-04c418f197b2c8612",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-00dc4be3396be18c3",
            "default_route_table_id": "rtb-02d5909506a768262",
            "default_security_group_id": "sg-0e9e61084cb8b93ee",
            "dhcp_options_id": "dopt-02d44acc8716b478c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04c418f197b2c8612",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02d5909506a768262",
            "owner_id": "555292118434",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-vpc-xTreAu1P",
              "kubernetes.io/cluster/eks-xTreAu1P": "shared"
            },
            "tags_all": {
              "Name": "eks-vpc-xTreAu1P",
              "kubernetes.io/cluster/eks-xTreAu1P": "shared"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "555292118434",
            "id": "vpc-04c418f197b2c8612",
            "region": "us-east-1"
          },
          "dependencies": [
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}